--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -61,7 +61,7 @@
     height: 450px;
     background-image: url(/image/game.jpg);
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-    color: white;
+    color: black;
     transition: left 0.5s;
     font-size: 16px;
     opacity: 0;
